<resources>
    <string name="app_name">Calculadora PDM 2020 2</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="virgula">.</string>
    <string name="backspace">←</string>
    <string name="limpar">Limpar</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="vezes">*</string>
    <string name="dividir">/</string>
    <string name="igual">=</string>
    <string name="tipo_calculadora">Tipo Calculadora</string>
    <string name="avancada">Avançada</string>
    <string name="basica">Básica</string>
    <string name="salvar">Salvar</string>
    <string name="raiz_quadrada">√</string>
    <string name="Exponeciacao">Y^X</string>
    <string name="Sinal_exponeciacao">^</string>
</resources>